fix header z-index (for "cookbook" menu)

--- a/src/assets/stylesheets/_header.scss
+++ b/src/assets/stylesheets/_header.scss
@@ -70,7 +70,7 @@ header {
   box-shadow: rgba(0, 0, 0, 0.1) 0 0 9px;
   width: 100%;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
 
   .wrapper {
     padding: 2em $header-padding;
